# python_assignment

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  tox.ini
.github/workflows/: code_checks.yml  push_tag.yml  tag_version.yml  upload_package.yml  workflow.yml
ci/: .taskenv  clean.yml  format.yml  linters.yml  tests.yml
python_assignment/python_performance/: Exercice_1.py  Exercice_10.py  Exercice_2.py  Exercice_3.py  Exercice_4.py  Exercice_5.py  Exercice_6.py  Exercice_7.py  Exercice_8.py  Exercice_9.py
python_assignment/subpackage_a/: module_a.py
python_assignment/subpackage_b/: module_b.py  module_c.py
tests/: conftest.py
tests/data/: arrivals.csv
tests/python_performance/: test_list_vs_generator.py
tests/subpackage_a/: test_module_a.py
tests/subpackage_b/: conftest.py  test_module_c.py
