[tool.poetry]
name = "python_assignment"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
pytest-cov = "^3.0.0"
coverage = "^6.4.2"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.13.0"
darglint = "^1.8.1"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
